@@ -20,19 +20,25 @@
 		public static function isTrue($boolean, $message = null)
 		{
 			if ($boolean !== true)
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($boolean)
+				);
 		}
-
+		
 		public static function isFalse($boolean, $message = null)
 		{
 			if ($boolean !== false)
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($boolean)
+				);
 		}
 		
 		public static function isNull($variable, $message = null)
 		{
 			if ($variable !== null)
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($variable)
+				);
 		}
 
 		public static function isNotNull($variable, $message = null)
@@ -44,7 +50,9 @@
 		public static function isArray(&$variable, $message = null)
 		{
 			if (!is_array($variable))
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($variable)
+				);
 		}
 
 		public static function isInteger($variable, $message = null)
@@ -55,7 +63,9 @@
 					&& $variable == (int) $variable
 				)
 			)
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($variable)
+				);
 		}
 		
 		public static function isPositiveInteger($variable, $message = null)
@@ -64,7 +74,9 @@
 				!self::checkInteger($variable)
 				|| $variable < 0
 			)
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($variable)
+				);
 		}
 
 		public static function isFloat($variable, $message = null)
@@ -75,19 +87,25 @@
 					&& is_numeric($variable)
 				)
 			)
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($variable)
+				);
 		}
 
 		public static function isString($variable, $message = null)
 		{
 			if (!is_string($variable))
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($variable)
+				);
 		}
 		
 		public static function isBoolean($variable, $message = null)
 		{
 			if (!($variable === true || $variable === false))
-				self::fail($message);
+				self::fail(
+					$message.', '.self::dumpArgument($variable)
+				);
 		}
 
 		public static function isTernaryBase($variable, $message = null)
@@ -108,6 +126,22 @@
 				self::fail($message);
 		}
 		
+		public static function isEqual($first, $second, $message = null)
+		{
+			if ($first !== $second)
+				self::fail(
+					$message.', '.self::dumpOppositeArguments($first, $second)
+				);
+		}
+		
+		public static function isInstance($first, $second, $message = null)
+		{
+			if (!($first instanceof $second))
+				self::fail(
+					$message.', '.self::dumpOppositeArguments($first, $second)
+				);
+		}
+		
 		public static function isUnreachable($message = 'unreachable code reached')
 		{
 			self::fail($message);
@@ -122,6 +156,18 @@
 				&& ($value == (int) $value)
 				&& (strlen($value) == strlen((int) $value))
 			);
+		}
+		
+		public static function dumpArgument($argument)
+		{
+			return 'argument: ['.var_export($argument, true).']';
+		}
+		
+		public static function dumpOppositeArguments($first, $second)
+		{
+			return
+				'arguments: ['.var_export($first, true).'] '
+				.'vs. ['.var_export($second, true).'] ';
 		}
 		//@}
 		
